infra/k8s/auth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth
spec:
  containers:
    - name: posts
      image: katlany/easypay_auth
