infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-pay-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy-pay-auth
  template:
    metadata:
      labels:
        app: easy-pay-auth
    spec: 
      containers:
        - name: auth
          image: katlany/easy-pay-auth
---
apiVersion: v1
kind: Service
metadata:
  name: easy-pay-auth-srv
spec:
  selector:
    app: easy-pay-auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
