infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  ports:
    - name: auth-postgres-db
      protocol: TCP
      port: 5432
      targetPort: 5432
