infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec: 
  rules:
    - host: easy-pay.com
      http:
        paths:
          - path: /auth
            backend:
              serviceName: easy-pay-auth-srv
              servicePort: 3000
